// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 404 error correctly 1`] = `
<SectionsContainer>
  <BasicSection>
    <div
      className="src-components-error-index__container"
    >
      <div
        className="src-components-error-index__code"
      >
        404
      </div>
      <h1
        className="src-components-error-index__h1"
      >
        Page Not Found
      </h1>
    </div>
  </BasicSection>
  <CopyrightFooter />
</SectionsContainer>
`;

exports[`should render a 500 error correctly 1`] = `
<SectionsContainer>
  <BasicSection>
    <div
      className="src-components-error-index__container"
    >
      <div
        className="src-components-error-index__code"
      >
        500
      </div>
      <h1
        className="src-components-error-index__h1"
      >
        Server Error
      </h1>
    </div>
  </BasicSection>
  <CopyrightFooter />
</SectionsContainer>
`;
